Fix block policy, breadcrumbs

--- a/app/blocks/_featured__slider.html
+++ b/app/blocks/_featured__slider.html
@@ -25,7 +25,7 @@
 									</div>
 									<a class="cart__body-title" href="detail.html">
 										Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										<div class="cart__body-price"><span>$163.01</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -44,7 +44,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/03.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -62,8 +62,8 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker  Keurig K-Elite Coffee Maker Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Mr. Coffee 10 Cup Coffee Maker
+										<div class="cart__body-price cart__body-price--old">$39.99<span>$59.99</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -82,7 +82,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/04.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -100,8 +100,46 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Keurig K-Select Coffee Maker
+										<div class="cart__body-price cart__body-price--old">$109.45<span>$129.45</span></div>
+									</a>
+									<div class="cart__body-footer">
+										<a class="cart__body-btn btn" href="#">Add to cart</a>
+										<div class="cart__body-actions">
+											<div class="cart__body-shuffle active"><i class="icon-shuffle"></i></div>
+											<div class="cart__body-like"><i class="icon-heart"></i></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="featured__slider-item">
+							<div class="featured__cart cart">
+								<div class="cart__overlay">
+									new
+								</div>
+								<div class="cart__img">
+									<a href="detail.html">
+										<img src="img/cart/05.jpg" alt="">
+									</a>
+								</div>
+								<div class="cart__body">
+									<div class="cart__body-header">
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
+										<ul class="cart__body-color">
+											<li></li>
+											<li></li>
+										</ul>
+									</div>
+									<a class="cart__body-title" href="detail.html">
+										Keurig K-Classic Coffee Maker
+										<div class="cart__body-price"><span>$79.00</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -120,7 +158,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/06.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -138,8 +176,8 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker  Keurig K-Elite Coffee Maker Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Cuisinart DCC-3200P1 DCC-3200CP Perfectemp Coffee Maker
+										<div class="cart__body-price"><span>$99.95</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -158,7 +196,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/07.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -176,8 +214,8 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker  Keurig K-Elite Coffee Maker Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Hamilton Beach 2-Way Brewer Coffee Maker
+										<div class="cart__body-price cart__body-price--old">$49.99<span>$59.99</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -196,7 +234,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/08.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -214,8 +252,8 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Keurig K-Mini Plus Coffee Maker
+										<div class="cart__body-price"><span>$99.99</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -234,7 +272,7 @@
 								</div>
 								<div class="cart__img">
 									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
+										<img src="img/cart/09.jpg" alt="">
 									</a>
 								</div>
 								<div class="cart__body">
@@ -252,46 +290,8 @@
 										</ul>
 									</div>
 									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker  Keurig K-Elite Coffee Maker Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
-									</a>
-									<div class="cart__body-footer">
-										<a class="cart__body-btn btn" href="#">Add to cart</a>
-										<div class="cart__body-actions">
-											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like"><i class="icon-heart"></i></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="featured__slider-item">
-							<div class="featured__cart cart">
-								<div class="cart__overlay">
-									new
-								</div>
-								<div class="cart__img">
-									<a href="detail.html">
-										<img src="img/cart/02.jpg" alt="#">
-									</a>
-								</div>
-								<div class="cart__body">
-									<div class="cart__body-header">
-										<div class="cart__rating" data-total-value="0">
-											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-										</div>
-										<ul class="cart__body-color">
-											<li></li>
-											<li></li>
-										</ul>
-									</div>
-									<a class="cart__body-title" href="detail.html">
-										Keurig K-Elite Coffee Maker  Keurig K-Elite Coffee Maker Keurig K-Elite Coffee Maker 
-										<span class="cart__body-price">$163.01</span>
+										Ninja CE251 Programmable Brewer
+										<div class="cart__body-price cart__body-price--old">$69.99<span>$79.99</span></div>
 									</a>
 									<div class="cart__body-footer">
 										<a class="cart__body-btn btn" href="#">Add to cart</a>
