--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -28,31 +28,31 @@
 				</div>
 				<!-- main-slider end -->
 				<!-- information -->
-				<div class="information">
-					<div class="information__row">
-						<div class="information__column">
-							<div class="information__item">
+				<div class="information-page">
+					<div class="information-page__row">
+						<div class="information-page__column">
+							<div class="information-page__item">
 								<a href="detail.html">
 									<img class="information__item-img" src="img/information/09.jpg" alt="">
 								</a>
 							</div>
 						</div>
-						<div class="information__column">
-							<div class="information__item">
+						<div class="information-page__column">
+							<div class="information-page__item">
 								<a href="detail.html">
 									<img class="information__item-img" src="img/information/10.jpg" alt="">
 								</a>
 							</div>
 						</div>
-						<div class="information__column">
-							<div class="information__item">
+						<div class="information-page__column">
+							<div class="information-page__item">
 								<a href="detail.html">
 									<img class="information__item-img" src="img/information/02.jpg" alt="">
 								</a>
 							</div>
 						</div>
-						<div class="information__column">
-							<div class="information__item">
+						<div class="information-page__column">
+							<div class="information-page__item">
 								<a href="detail.html">
 									<img class="information__item-img" src="img/information/07.jpg" alt="">
 								</a>
