Add bottom toolbar, fix price-slider,

--- a/app/all-categories-grid.html
+++ b/app/all-categories-grid.html
@@ -53,12 +53,12 @@
 									<div class="price-filter__values">
 										<div class="price-filter__values-column">
 											<div class="price-filter__values-input">
-												<input class="input" id="filter-price__start" autocomplete="off" type="number" name="form[]">
+												<input class="input" id="filter-price__start" type="number">
 											</div>
 										</div>
 										<div class="price-filter__values-column">
 											<div class="price-filter__values-input">
-												<input class="input" id="filter-price__end" autocomplete="off" type="number" name="form[]">
+												<input class="input" id="filter-price__end" type="text">
 											</div>
 										</div>
 									</div>
@@ -189,7 +189,7 @@
 							<!-- slider-grid end -->
 
 							<!-- toolbar -->
-							<div class="all-categories-grid__content-toolbar toolbar">
+							<div class="all-categories-grid__content-toolbar toolbar toolbar--top">
 								<div class="toolbar__row">
 									<div class="toolbar__column">
 										<div class="toolbar__sort">
@@ -241,7 +241,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Cuisinart DCC-1200
-													<span class="cart__body-price">$79.99</span>
+													<div class="cart__body-price"><span>$79.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -276,7 +276,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Nespresso by De'Longhi EN520SL
-													<span class="cart__body-price">$465.00</span>
+													<div class="cart__body-price"><span>$465.00</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -314,7 +314,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Sboly 6 In 1 Coffee Machine, Single Serve Coffee
-													<span class="cart__body-price">$99.99</span>
+													<div class="cart__body-price cart__body-price--old">$89.99<span>$99.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -352,7 +352,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Keurig K-Duo Coffee Maker 
-													<span class="cart__body-price">$164.30</span>
+													<div class="cart__body-price cart__body-price--old">$144.30<span>$164.30</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -390,7 +390,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Braun KF7170SI BrewSense Drip Coffeemaker
-													<span class="cart__body-price">$87.96</span>
+													<div class="cart__body-price"><span>$87.96</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -428,7 +428,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													De'Longhi ESAM3300
-													<span class="cart__body-price">$549.99</span>
+													<div class="cart__body-price"><span>$549.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -466,7 +466,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Mr. Coffee 12-Cup 
-													<span class="cart__body-price">$24.99</span>
+													<div class="cart__body-price cart__body-price--old">$21.99<span>$24.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -501,7 +501,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													De'Longhi BCO430BM
-													<span class="cart__body-price">$249.99</span>
+													<div class="cart__body-price cart__body-price--old">$219.99<span>$249.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -536,7 +536,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Takeya Patented Deluxe Cold
-													<span class="cart__body-price">$21.99</span>
+													<div class="cart__body-price cart__body-price--old">$19.99<span>$21.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -571,7 +571,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Cafe Quality Cold Brew Filters 
-													<span class="cart__body-price">$6.99</span>
+													<div class="cart__body-price"><span>$6.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -606,7 +606,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Cuisinart DCB-10 Automatic 
-													<span class="cart__body-price">$63.96</span>
+													<div class="cart__body-price cart__body-price--old">$53.96<span>$63.96</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -641,7 +641,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Presto 02937 Dorothy™
-													<span class="cart__body-price">$79.99</span>
+													<div class="cart__body-price"><span>$79.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -679,7 +679,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													BTaT- Cold Brew Coffee Maker
-													<span class="cart__body-price">$36.99</span>
+													<div class="cart__body-price"><span>$36.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -717,7 +717,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													300 Paper Filters with Lid for Reusable K-Cups
-													<span class="cart__body-price">$15.95</span>
+													<div class="cart__body-price cart__body-price--old">$12.99<span>$15.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -752,7 +752,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Hamilton Beach FlexBrew
-													<span class="cart__body-price">$44.85</span>
+													<div class="cart__body-price"><span>$44.85</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -768,17 +768,45 @@
 							</div>
 							<!-- carts-grid end -->
 
-							<!-- pagination -->
-							<div class="all-categories-grid__content-pagination pagination">
-								<ul class="pagination__list">
-									<li class="pagination__item"><a href="#" class="pagination__link active">1</a></li>
-									<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
-									<li class="pagination__item"><a href="#" class="pagination__link">...</a></li>
-									<li class="pagination__item"><a href="#" class="pagination__link">9</a></li>
-									<li class="pagination__item"><a href="#" class="pagination__link">10</a></li>
-								</ul>
+							<!-- toolbar -->
+							<div class="all-categories-grid__content-toolbar toolbar toolbar--bottom">
+								<div class="toolbar__row">
+									<div class="toolbar__column">
+										<div class="toolbar__sort">
+											<a class="toolbar__sort-link" href="#"><i class="icon-th toolbar__sort-icon"></i></a>
+											<a class="toolbar__sort-link" href="#"><i class="icon-th-large toolbar__sort-icon"></i></a>
+											<a class="toolbar__sort-link" href="#"><i class="icon-th-list toolbar__sort-icon"></i></a>
+											<span class="toolbar__sort-result">Showing 1–15 of 20 results</span>
+										</div>
+									</div>
+									<div class="toolbar__column toolbar__column--pagination">
+										<!-- pagination -->
+										<div class="pagination">
+											<ul class="pagination__list">
+												<li class="pagination__item"><a href="#" class="pagination__link active">1</a></li>
+												<li class="pagination__item"><a href="#" class="pagination__link">2</a></li>
+												<li class="pagination__item"><a href="#" class="pagination__link">...</a></li>
+												<li class="pagination__item"><a href="#" class="pagination__link">9</a></li>
+												<li class="pagination__item"><a href="#" class="pagination__link">10</a></li>
+											</ul>
+										</div>
+										<!-- pagination end -->
+									</div>
+									<div class="toolbar__column">
+										<div class="toolbar__select-sort">
+											<select name="sort" id="sort">
+												<option value="default">Default sorting</option>
+												<option value="popularity">Popularity</option>
+												<option value="rating">Average rating</option>
+												<option value="recent">Sort by most recent</option>
+												<option value="cheapest">Price: from the cheapest</option>
+												<option value="expensive">Price: from the most expensive</option>
+											</select>
+										</div>
+									</div>
+								</div>
 							</div>
-							<!-- pagination end -->
+							<!-- toolbar end -->
 
 							<!-- featured-product -->
 							<div class="all-categories-grid__content-featured featured-product">
@@ -810,42 +838,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Keurig K-Elite Coffee Maker 
-													<span class="cart__body-price">$163.01</span>
-												</a>
-												<div class="cart__body-footer">
-													<a class="cart__body-btn btn" href="#">Add to cart</a>
-													<div class="cart__body-actions">
-														<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-														<div class="cart__body-like"><i class="icon-heart"></i></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-									<div class="featured__slider-item">
-										<div class="featured__cart cart">
-											<div class="cart__img cart__img--hover">
-												<a href="detail.html">
-													<img src="img/cart/01.jpg" alt="">
-												</a>
-											</div>
-											<div class="cart__body">
-												<div class="cart__body-header">
-													<div class="cart__rating" data-total-value="0">
-														<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-														<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-													</div>
-													<ul class="cart__body-color">
-														<li></li>
-														<li></li>
-													</ul>
-												</div>
-												<a class="cart__body-title" href="detail.html">
-													KRUPS Grind 
-													<span class="cart__body-price">$163.01</span>
+													<div class="cart__body-price"><span>$163.01</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -880,7 +873,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Mr. Coffee 10 Cup Coffee Maker
-													<span class="cart__body-price">$59.99</span>
+													<div class="cart__body-price"><span>$59.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -915,7 +908,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Keurig K-Select Coffee Maker
-													<span class="cart__body-price">$129.45</span>
+													<div class="cart__body-price cart__body-price--old">$119.45<span>$129.45</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -950,7 +943,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Keurig K-Classic Coffee Maker
-													<span class="cart__body-price">$79.00</span>
+													<div class="cart__body-price cart__body-price--old">$69.00<span>$79.00</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -985,7 +978,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Cuisinart DCC-3200P1 DCC-3200CP Perfectemp Coffee Maker
-													<span class="cart__body-price">$99.95</span>
+													<div class="cart__body-price"><span>$99.95</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -1020,7 +1013,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Hamilton Beach 2-Way Brewer Coffee Maker
-													<span class="cart__body-price">$59.99</span>
+													<div class="cart__body-price"><span>$59.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -1055,7 +1048,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Keurig K-Mini Plus Coffee Maker
-													<span class="cart__body-price">$99.99</span>
+													<div class="cart__body-price"><span>$99.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
@@ -1090,7 +1083,7 @@
 												</div>
 												<a class="cart__body-title" href="detail.html">
 													Ninja CE251 Programmable Brewer
-													<span class="cart__body-price">$79.99</span>
+													<div class="cart__body-price cart__body-price--old">$69.99<span>$79.99</span></div>
 												</a>
 												<div class="cart__body-footer">
 													<a class="cart__body-btn btn" href="#">Add to cart</a>
