--- a/app/blocks/_header.html
+++ b/app/blocks/_header.html
@@ -5,92 +5,94 @@
 					<img class="header__logo-link" src="img/header/logo.png" alt="">
 				</a>
 
-				<div class="menu__burger">
-					<span></span>
-				</div>
-				<nav class="menu">
-					<ul class="menu__list">           
-						<li class="menu__item menu__item-dropdown"><a class="menu__link" href="index.html">Home</a>
-							<ul class="menu__submenu">
-								<div class="menu__submenu-row">
-									<div class="menu__submenu-column">
-										<ul>
-											<li class="menu__submenu-title">product types</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">simple product</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">grouped product</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">variable product</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">external/adffiliate product</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">product tag</a></li>
-										</ul>
-									</div>
-									<div class="menu__submenu-column">
-										<ul>
-											<li class="menu__submenu-title">shop pages</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">cart</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">checkout</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">my account</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">wishlist</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Log In</a></li>
-										</ul>
-									</div>
-									<div class="menu__submenu-column">
-										<ul>
-											<li class="menu__submenu-title">shop categories</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">skirts</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">women category</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">tops</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">blouses</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">sport bags</a></li>
-										</ul>
-									</div>
-<!-- 									<div class="menu__submenu-column">
-										<ul>
-											<li class="menu__submenu-title">shop shortcodes</li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Product Tabs </a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Products</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Slider</a></li>
-											<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Ajax cart</a></li>
-										</ul>
-									</div> -->
-									<div class="menu__submenu-column">
-										<a href="#">
-											<img class="menu__submenu-img" src="img/information/08.jpg" alt="">
-										</a>
-									</div>
-								</div>
-							</ul>
-						</li>
-						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Shop</a>
-							<ul class="menu__dropdown">
-								<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
-								<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
-								<li class="menu__item menu__dropdown-item"><a href="detail.html" class="menu__link menu__dropdown-link">detail</a></li>
-							</ul>
-						</li>
-						<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
-						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Blog</a>
-							<ul class="menu__dropdown">
-								<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
-								<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
-							</ul>
-						</li>
-						<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Contact us</a>
-							<ul class="menu__dropdown">
-								<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact us</a></li>
-								<li class="menu__item menu__dropdown-item"><a href="contact.html" class="menu__link menu__dropdown-link">Contact</a></li>
-								<li class="menu__item menu__dropdown-item"><a href="about.html" class="menu__link menu__dropdown-link">About</a></li>
-							</ul>
-						</li>
-					</ul>
-					<div class="menu__item-search content__block_item"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
-						<div class="search">
-							<form class="search__form" action="#">
-								<input class="search__form-text" type="text" placeholder="Search entire store here">
-								<button class="search__form-btn">search</button>
-							</form>
-						</div>
+				<div class="header__menu-inner">
+					<div class="menu__burger">
+						<span></span>
 					</div>
-				</nav>
+					<nav class="menu">
+						<ul class="menu__list">           
+							<li class="menu__item menu__item-dropdown"><a class="menu__link" href="index.html">Home</a>
+								<ul class="menu__submenu">
+									<div class="menu__submenu-row">
+										<div class="menu__submenu-column">
+											<ul>
+												<li class="menu__submenu-title">product types</li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">simple product</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">grouped product</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">variable product</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">external/adffiliate product</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">product tag</a></li>
+											</ul>
+										</div>
+										<div class="menu__submenu-column">
+											<ul>
+												<li class="menu__submenu-title">shop pages</li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">cart</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">checkout</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">my account</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">wishlist</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">Log In</a></li>
+											</ul>
+										</div>
+										<div class="menu__submenu-column">
+											<ul>
+												<li class="menu__submenu-title">shop categories</li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">skirts</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">women category</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">tops</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">blouses</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">sport bags</a></li>
+											</ul>
+										</div>
+	<!-- 									<div class="menu__submenu-column">
+											<ul>
+												<li class="menu__submenu-title">shop shortcodes</li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Product Tabs </a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Products</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Slider</a></li>
+												<li class="menu__item menu__submenu-item"><a href="#" class="menu__link menu__submenu-link">SNS Ajax cart</a></li>
+											</ul>
+										</div> -->
+										<div class="menu__submenu-column">
+											<a href="#">
+												<img class="menu__submenu-img" src="img/information/08.jpg" alt="">
+											</a>
+										</div>
+									</div>
+								</ul>
+							</li>
+							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Shop</a>
+								<ul class="menu__dropdown">
+									<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
+									<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
+									<li class="menu__item menu__dropdown-item"><a href="detail.html" class="menu__link menu__dropdown-link">detail</a></li>
+								</ul>
+							</li>
+							<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
+							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Blog</a>
+								<ul class="menu__dropdown">
+									<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
+									<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
+								</ul>
+							</li>
+							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Contact us</a>
+								<ul class="menu__dropdown">
+									<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact us</a></li>
+									<li class="menu__item menu__dropdown-item"><a href="contact.html" class="menu__link menu__dropdown-link">Contact</a></li>
+									<li class="menu__item menu__dropdown-item"><a href="about.html" class="menu__link menu__dropdown-link">About</a></li>
+								</ul>
+							</li>
+						</ul>
+						<div class="menu__item-search content__block_item"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
+							<div class="search">
+								<form class="search__form" action="#">
+									<input class="search__form-text" type="text" placeholder="Search entire store here">
+									<button class="search__form-btn">search</button>
+								</form>
+							</div>
+						</div>
+					</nav>
+				</div>
 
 
 				<div class="header__basket basket">
