--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -61,7 +61,6 @@
 					</div>
 				</div>
 				<!-- information end -->
-
 				<div class="shop-col">
 					<div class="shop-col__body">
 
@@ -763,6 +762,8 @@
 							</div>
 							<!-- featured-product end -->
 
+							@@include('blocks/_featured-product.html')
+
 							<!-- information-product -->
 							<div class="shop-col__content-information information-product">
 								<div class="information-product__row">
@@ -1065,8 +1066,6 @@
 					</div>
 				</div>
 			</div>
-
-			
 
 			<!-- policy -->
 			<div class="policy policy--white">
