--- a/app/blocks/_header.html
+++ b/app/blocks/_header.html
@@ -12,7 +12,7 @@
 					<nav class="menu">
 						<ul class="menu__list">           
 							<li class="menu__item menu__item-dropdown"><a class="menu__link" href="index.html">Home</a>
-								<ul class="menu__submenu">
+								<div class="menu__submenu">
 									<div class="menu__submenu-row">
 										<div class="menu__submenu-column">
 											<ul>
@@ -59,9 +59,9 @@
 											</a>
 										</div>
 									</div>
-								</ul>
+								</div>
 							</li>
-							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Shop</a>
+							<li class="menu__item menu__item-dropdown"><a class="menu__link" href="#">Shop</a>
 								<ul class="menu__dropdown">
 									<li class="menu__item menu__dropdown-item"><a href="all-categories.html" class="menu__link menu__dropdown-link">all categories</a></li>
 									<li class="menu__item menu__dropdown-item"><a href="shop-col.html" class="menu__link menu__dropdown-link">shop col</a></li>
@@ -69,13 +69,13 @@
 								</ul>
 							</li>
 							<li class="menu__item"><a class="menu__link" href="all-categories-grid.html">Featured</a></li>
-							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Blog</a>
+							<li class="menu__item menu__item-dropdown"><a class="menu__link" href="#">Blog</a>
 								<ul class="menu__dropdown">
 									<li class="menu__item menu__dropdown-item"><a href="blog-col.html" class="menu__link menu__dropdown-link">blog col</a></li>
 									<li class="menu__item menu__dropdown-item"><a href="blog-single.html" class="menu__link menu__dropdown-link">blog single</a></li>
 								</ul>
 							</li>
-							<li class="menu__item"><a class="menu__link menu__link-dropdown" href="#">Contact us</a>
+							<li class="menu__item menu__item-dropdown"><a class="menu__link" href="#">Contact us</a>
 								<ul class="menu__dropdown">
 									<li class="menu__item menu__dropdown-item"><a href="contact-us.html" class="menu__link menu__dropdown-link">Contact us</a></li>
 									<li class="menu__item menu__dropdown-item"><a href="contact.html" class="menu__link menu__dropdown-link">Contact</a></li>
