--- a/app/blocks/_sidebar-nav.html
+++ b/app/blocks/_sidebar-nav.html
@@ -3,7 +3,7 @@
 								<ul class="sidebar-nav__list">
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Coffee Machines</a></li>
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Single-Serve Brewers</a></li>
-									<li class="sidebar-nav__item @@sidebar-nav__item"><a class="sidebar-nav__link @@sidebar-nav__link" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item-dropdown @@sidebar-nav__item"><a class="sidebar-nav__link sidebar-nav__link-icon @@sidebar-nav__link" href="#">Shop</a>
 										<ul class="sidebar-nav__dropdown sidebar-nav__dropdown--img">
 											<div class="sidebar-nav__dropdown-img">
 												<img src="img/sidebar-nav/03.jpg" alt="">
@@ -35,7 +35,7 @@
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Espresso Machine</a></li>
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Coffeemaker Combos</a></li>
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Coffee Makers</a></li>
-									<li class="sidebar-nav__item @@sidebar-nav__item"><a class="sidebar-nav__link @@sidebar-nav__link" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item-dropdown @@sidebar-nav__item"><a class="sidebar-nav__link sidebar-nav__link-icon @@sidebar-nav__link" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
@@ -64,7 +64,7 @@
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Disposable Coffee Filters</a></li>
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Thermal Carafes</a></li>
 									<li class="sidebar-nav__item @@sidebar-nav__item"><a href="#" class="sidebar-nav__link @@sidebar-nav__link">Coffee & Tea</a></li>
-									<li class="sidebar-nav__item @@sidebar-nav__item"><a class="sidebar-nav__link @@sidebar-nav__link" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
+									<li class="sidebar-nav__item sidebar-nav__item-dropdown @@sidebar-nav__item"><a class="sidebar-nav__link sidebar-nav__link-icon @@sidebar-nav__link" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
 										<ul class="sidebar-nav__dropdown">
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
